[package]
name = "rmcs-resource-db"
version = "0.3.0"
edition = "2021"

[dependencies]
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
sea-query = { version = "0.30.7", features = ["with-uuid"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-chrono", "with-uuid"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
